engine/test/electron/scripts/lexer/errors/unterminated_raw_string.e
// ERROR TEST: Unterminated raw string
r"raw string without end
